test/simple/correct/Exponent.hs
module Exponent where

main = (5 ^ 4, 100 ^ 0, (-3) ^ 3 {- , 10 ^ 25 -} ) 
